<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".UI.ClassDetailActivity">

    <ScrollView
        android:id="@+id/topScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toTopOf="@+id/classAssessmentList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/topHalf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:verticalScrollbarPosition="right">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/class_name" />

                    <EditText
                        android:id="@+id/textClassNameField"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term" />

                    <Spinner
                        android:id="@+id/TermList"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_name" />

                    <EditText
                        android:id="@+id/instructorName"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="2dp"
                        android:ems="10"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_phone" />

                    <EditText
                        android:id="@+id/instructorPhone"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="2dp"
                        android:ems="10"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_e_mail" />

                    <EditText
                        android:id="@+id/instructorEMail"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="2dp"
                        android:ems="10"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date" />

                    <Button
                        android:id="@+id/DateStartPickerbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="#00FFFFFF"
                        android:onClick="dateStartPicker"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_date" />

                    <Button
                        android:id="@+id/DateEndPickerbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="#00FFFFFF"
                        android:onClick="dateEndPicker"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/class_status" />

                    <Spinner
                        android:id="@+id/Status"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:entries="@array/Class_Status"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/class_notes" />

                    <EditText
                        android:id="@+id/classNote"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:ems="12"
                        android:scrollbars="vertical"
                        android:textSize="12sp"
                        android:verticalScrollbarPosition="right" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/noteShareButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:onClick="shareNote"
                        app:fabCustomSize="40dp"
                        app:srcCompat="@android:drawable/ic_menu_share" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <Button
                    android:id="@+id/SaveAssessmentButton"
                    style="@style/Theme.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@empty"
                    android:backgroundTint="@color/teal_200"
                    android:onClick="saveClass"
                    android:text="@string/save"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <Button
                    android:id="@+id/CancelAssessmentButton"
                    style="@style/Theme.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@empty"
                    android:backgroundTint="@color/teal_200"
                    android:onClick="cancelClass"
                    android:text="@string/cancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <Button
                    android:id="@+id/DeleteAssessmentButton"
                    style="@style/Theme.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@empty"
                    android:backgroundTint="@color/teal_200"
                    android:onClick="deleteClass"
                    android:text="@string/delete"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/classAssessmentList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topScroll" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_button"
        android:onClick="addAssessment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />


</androidx.constraintlayout.widget.ConstraintLayout>